--- a/config.toml
+++ b/config.toml
@@ -96,13 +96,13 @@ canonifyURLs = true
   # This appears at the top of the sidebar above params.intro.header.
   # A width of less than 100px is recommended from a design perspective.
   [params.intro.pic]
-    src       = "/img/main/logo.jpg"
+    src       = "/img/main/kike_1.jpeg"
     # Sets Image to be a cirlce
     circle    = true
     # Sets Image to be Future Imperfect's hexagon
     imperfect = true
     width     = ""
-    alt       = "Enrique Bruzual - A development environment"
+    alt       = "Enrique Bruzual"
 
 [params.postAmount]
 # Sets the number of recent posts to show in the sidebar. The default value is 5.
